[package]
name = "digraph-rs"
description = "a handful of algorithms for digraphs"
version = "0.1.0"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
homepage = "https://github.com/besok/digraph-rs"
repository = "https://github.com/besok/digraph-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["digraphs"]
categories = ["algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.4.0"
 